[package]
name = "actum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.9.0"
tokio = { version = "1.33.0", features = ["full", "rt"] }
tokio-util = { version = "0.7.10", features = ["rt"] }

