[package]
name = "actum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
tokio-stream = "0.1"
futures = "0.3.30"
tracing = { version = "0.1.40" }
log = "0.4.20"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
