[package]
name = "actum"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Stedile <andrea.stedile@unitn.it>"]
repository = "https://github.com/andreastedile/actum"
keywords = ["actor", "concurrency"]
categories = ["concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
tracing = { version = "0.1.40", default-features = false }
either = "1.13.0"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
